--- a/web/src/components/UI/Navbar/Navbar.module.scss
+++ b/web/src/components/UI/Navbar/Navbar.module.scss
@@ -15,6 +15,22 @@
   a {
     color: white;
   }
+  &:last-child {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background-color: #069157;
+    width: 7rem;
+    height: 2rem;
+    transition: 0.7s;
+    &:hover {
+      background-color: #ff4c05;
+      a {
+        color: black !important;
+      }
+    }
+  }
 }
 .navbar {
   display: flex;
@@ -22,21 +38,4 @@
   justify-content: center;
   height: 10vh;
   width: 100%;
-}
-
-.contacts_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50px;
-  background-color: #069157;
-  width: 7rem;
-  height: 2rem;
-  transition: 0.7s;
-  &:hover {
-    background-color: #ff4c05;
-    a {
-      color: black !important;
-    }
-  }
 }
