--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -9,8 +9,13 @@
   box-sizing: border-box;
   list-style: none;
 }
-body {
+body,
+html {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background: #222831;
+}
+a {
+  color: white;
+  text-decoration: none;
 }
