--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -14,6 +14,9 @@ html {
   width: 100%;
   height: 100vh;
   background: #222831;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 a {
   color: white;
