--- a/web/src/components/UI/FlipText/FlipText.module.scss
+++ b/web/src/components/UI/FlipText/FlipText.module.scss
@@ -1,7 +1,15 @@
 .text {
-  color: red;
+  color: rgb(255, 0, 0);
 }
-.img {
-  margin: 0;
-  width: 15%;
+.img_container {
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(0, 0, 0, 0.85);
 }
