--- a/web/src/components/UI/FlipText/FlipText.module.scss
+++ b/web/src/components/UI/FlipText/FlipText.module.scss
@@ -1,14 +1,13 @@
-.text {
-  color: rgb(255, 0, 0);
-}
 .img_container {
-  position: absolute;
+  position: fixed;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+  z-index: 1;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   background-color: rgb(0, 0, 0, 0.85);
