--- a/web/src/pages/TheoryPage/TheoryPage.module.scss
+++ b/web/src/pages/TheoryPage/TheoryPage.module.scss
@@ -13,3 +13,38 @@
 .body {
   margin-top: 1%;
 }
+
+.imgg {
+  background: #069157;
+  margin: 0 auto;
+  display: flex;
+  width: 15vw;
+}
+
+.img_cover {
+  width: 20%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background: lightgreen;
+  align-items: center;
+  z-index: 1;
+}
+.flip_text {
+  color: red;
+  cursor: pointer;
+}
+
+.img_descr {
+  text-align: center;
+  margin-top: 1%;
+}
+
+.mark {
+  background: #069157;
+  color: black;
+}
+.button_container {
+  display: flex;
+  justify-content: center;
+}
