--- a/web/src/components/UI/Navbar/Navbar.module.scss
+++ b/web/src/components/UI/Navbar/Navbar.module.scss
@@ -20,9 +20,12 @@
   }
 }
 .navbar {
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 10vh;
+  height: 8vh;
   width: 100%;
+  background-color: #1f2328;
+  z-index: 1;
 }
