--- a/web/src/pages/StructurePage/StructurePage.module.scss
+++ b/web/src/pages/StructurePage/StructurePage.module.scss
@@ -1,3 +1,12 @@
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  padding-top: 8%;
+}
 .img {
   width: 60%;
+  margin: 2% 0 0 0;
 }
