--- a/web/scss/styles.scss
+++ b/web/scss/styles.scss
@@ -1,6 +1,7 @@
 @import 'navbar';
 @import 'main';
 @import 'variables';
+@import 'modal';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
 * {
@@ -20,4 +21,12 @@ body {
 }
 a {
   color: $text-color;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+*::-webkit-scrollbar-thumb {
+  background: #898e94;
+  border-radius: 20px;
 }
