--- a/web/scss/styles.scss
+++ b/web/scss/styles.scss
@@ -23,6 +23,11 @@ a {
   color: $text-color;
 }
 
+h4 a {
+  text-decoration: underline;
+  color: red;
+}
+
 *::-webkit-scrollbar {
   width: 5px;
 }
